# unitree_bringup

./: CMakeLists.txt  README.md  package.xml
config/g1/: MID360_config.json  controllers.yaml  joy.yaml  policy.onnx
config/g1/glim/: config.json  config_ros.json  config_sensors.json
config/go1/: controllers.yaml  go1_getup.onnx  go1_handstand.onnx  go1_joystick.onnx  joy.yaml
config/go2/: controllers.yaml  joy.yaml  policy.onnx
launch/: lio.launch.py  mujoco.launch.py  real.launch.py  teleop.launch.py
