<?xml version="1.0"?>
<package format="2">
    <name>unitree_bringup</name>
    <version>0.0.0</version>
    <description>Unitree robot bringup files</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
